--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div class = "container">
         <h1>Coding Quiz Challenge</h1>
-            <button id="clickButton">Click to Start Quiz</button>
+            <button id = "clickButton"> Click to Start Quiz </button>
             <p id="myQuestions">
                 </p>
-
+        <form id = "quiz-wrap"></form>
+        </div>
 <script type="text/javascript" src="quiz.js"></script>
     <body>
 </html>
