Buttons with Tutor

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <div class = "container">
         <h1>Coding Quiz Challenge</h1>
-            <button id = "clickButton"> Click to Start Quiz </button>
+            <button onclick= "quizFunction()"> Click to Start Quiz </button>
             <p id="myQuestions">
+                   
                 </p>
         <form id = "quiz-wrap"></form>
         </div>
