--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <body>
         <div class = "container">
         <h1>Coding Quiz Challenge</h1>
-            <button onclick= "quizFunction()"> Click to Start Quiz </button>
+            <button onclick= "quizFunction()">Click to Start Quiz</button>
             <p id="myQuestions">
                    
                 </p>
         <form id = "quiz-wrap"></form>
-        </div>
+        </div> <!--ending div for container-->
 <script type="text/javascript" src="quiz.js"></script>
     <body>
 </html>
