--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         <div class="options">
             <ul id="ul">
-                <li id="opOne" onclick="button(this)"></li>
-                <li id="opTwo" onclick="button(this)"></li>
-                <li id="opThree" onclick="button(this)"></li>
-                <li id="opFour" onclick="button(this)"></li>
+                <li id="one" onclick="button(this)"></li>
+                <li id="two" onclick="button(this)"></li>
+                <li id="three" onclick="button(this)"></li>
+                <li id="four" onclick="button(this)"></li>
             </ul>
         </div>
         <div class="score">
