variables and answers for if else

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="quiz_wrapper">
         <div class="question" id="questionBox">
         </div>
-
+<!--options for questions that will display-->
         <div class="options">
             <ul id="ul">
                 <li id="one" onclick="button(this)"></li>
