--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="quiz_wrapper">
         <div class="question" id="questionBox">
         </div>
-<!--options for questions that will display-->
+        <!--options for questions that will display-->
         <div class="options">
             <ul id="ul">
                 <li id="one" onclick="button(this)"></li>
@@ -20,12 +20,12 @@
                 <li id="four" onclick="button(this)"></li>
             </ul>
         </div>
+        <!--button and score code-->
         <div class="score">
             <div class="next">
                 <button type="button" onclick="next()" id="button">Next</button>
             </div>
-            <div class="score-card">
-                Score : <span id="scoreCard">0</span>
+            <div class="score-card">Score<span id="scoreCard">0</span>
             </div>
         </div>
 
