trying to get answer correct

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="next">
                 <button type="button" onclick="next()" id="button">Next</button>
             </div>
-            <div class="score-card">Score<span id="scoreCard">0</span>
+            <div class="userScore">Score<span id="scoreCard">0</span>
             </div>
         </div>
 
