--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <title>Multiple Choice Quiz</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        a:hover {
+          background-color: yellow;
+        }
+        </style>
 </head>
 
 <body>
@@ -25,6 +30,7 @@
             <div class="next">
                 <button type="button" onclick="next()" id="button">Next</button>
             </div>
+            <br>
             <div class="userScore">Score<span id="scoreCard">0</span>
             </div>
         </div>
