--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <head>
     <title>Multiple Choice Quiz</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        a:hover {
-          background-color: yellow;
-        }
-        </style>
 </head>
 
 <body>
@@ -19,13 +14,13 @@
         <!--options for questions that will display-->
         <div class="options">
             <ul id="ul">
-                <li id="one" onclick="button(this)"></li>
+                <li id="one" onclick="button(this)"></li>  
                 <li id="two" onclick="button(this)"></li>
                 <li id="three" onclick="button(this)"></li>
                 <li id="four" onclick="button(this)"></li>
             </ul>
         </div>
-        <!--button and score code-->
+        <!--button and score-->
         <div class="score">
             <div class="next">
                 <button type="button" onclick="next()" id="button">Next</button>
