funtionality with wrong answer / right answer

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <!--options for questions that will display-->
         <div class="options">
             <ul id="ul">
-                <li id="one" onclick="button(this)"></li>  
-                <li id="two" onclick="button(this)"></li>
-                <li id="three" onclick="button(this)"></li>
-                <li id="four" onclick="button(this)"></li>
+                <li id="1" onclick="button(this)"></li>  
+                <li id="2" onclick="button(this)"></li>
+                <li id="3" onclick="button(this)"></li>
+                <li id="4" onclick="button(this)"></li>
             </ul>
         </div>
         <!--button and score-->
